--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@eonx-com/capacitor-webview-overlay",
-    "version": "5.0.1",
+    "version": "5.0.2-alpha.1",
     "description": "Webview Overlay",
     "main": "dist/plugin.cjs.js",
     "module": "dist/esm/index.js",
@@ -46,9 +46,9 @@
         "resize-observer-polyfill": "^1.5.1"
     },
     "devDependencies": {
-        "@capacitor/android": "^5.0.5",
-        "@capacitor/core": "^5.0.5",
-        "@capacitor/ios": "^5.0.5",
+        "@capacitor/android": "^6.1.2",
+        "@capacitor/core": "^6.1.2",
+        "@capacitor/ios": "^6.1.2",
         "@ionic/eslint-config": "^0.3.0",
         "@ionic/prettier-config": "^1.0.1",
         "@ionic/swiftlint-config": "^1.1.2",
@@ -61,7 +61,7 @@
         "typescript": "~4.0.3"
     },
     "peerDependencies": {
-        "@capacitor/core": "^5.0.0"
+        "@capacitor/core": "^6.0.0"
     },
     "prettier": "@ionic/prettier-config",
     "swiftlint": "@ionic/swiftlint-config",
