--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@eonx-com/capacitor-webview-overlay",
-    "version": "5.0.2-alpha.1",
+    "version": "5.0.2-alpha.2",
     "description": "Webview Overlay",
     "main": "dist/plugin.cjs.js",
     "module": "dist/esm/index.js",
@@ -58,7 +58,7 @@
         "rimraf": "^3.0.2",
         "rollup": "^2.32.0",
         "swiftlint": "^1.0.1",
-        "typescript": "~4.0.3"
+        "typescript": "^5.6.2"
     },
     "peerDependencies": {
         "@capacitor/core": "^6.0.0"
