--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         "allowUnreachableCode": false,
         "declaration": true,
         "esModuleInterop": true,
-        "lib": ["dom", "es2017"],
+        "lib": [
+            "dom",
+            "es2017"
+        ],
         "module": "esnext",
         "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
@@ -13,7 +16,10 @@
         "pretty": true,
         "sourceMap": true,
         "strict": false,
-        "target": "es2017"
+        "target": "es2017",
+        "skipLibCheck": true
     },
-    "files": ["src/index.ts"]
+    "files": [
+        "src/index.ts"
+    ]
 }
